k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cts-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cts-backend
  template:
    metadata:
      labels:
        app: cts-backend
    spec:
      containers:
        - name: cts-backend
          image: 658658/cts:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
