k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cts-backend-service
spec:
  selector:
    app: cts-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
