k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cts-backend
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cts-backend
